Add explanation how to solve the InaccessibleObjectException for setAccessible(true) for the table field